--- a/api/app/assets/javascripts/templates/components/team-statistic.hbs
+++ b/api/app/assets/javascripts/templates/components/team-statistic.hbs
@@ -33,37 +33,59 @@
             </thead>
             <tbody>
             {{#each stats as |row|}}
-                <tr>
+                <tr class={{if row.lineup 'active'}}>
                     <td>{{row.player.nameWithNumber}}</td>
-                    <td>{{row.freeThrowMade}}/{{row.totalFreeThrows}}</td>
-                    <td>{{row.freeThrowPercent}}%</td>
-                    <td>{{row.fieldGoalMade}}/{{row.totalFieldGoals}}</td>
-                    <td>{{row.fieldGoalPercent}}%</td>
-                    <td>{{row.threePointMade}}/{{row.totalThreePoints}}</td>
-                    <td>{{row.threePointPercent}}%</td>
-                    <td>{{row.offenciveRebounds}}</td>
-                    <td>{{row.deffenciveRebounds}}</td>
-                    <td>{{row.totalRebounds}}</td>
+                    <td>{{row.freeThrowMade}}/{{row.freeThrowAttempts}}</td>
+                    {{#best-value stats=stats event='freeThrowPercent' val=row.freeThrowPercent}}
+                        {{row.freeThrowPercent}}%
+                    {{/best-value}}
+                    <td>{{row.fieldGoalMade}}/{{row.fieldGoalAttempts}}</td>
+                    {{#best-value stats=stats event='fieldGoalPercent' val=row.fieldGoalPercent}}
+                        {{row.fieldGoalPercent}}%
+                    {{/best-value}}
+                    <td>{{row.threePointMade}}/{{row.threePointAttempts}}</td>
+                    {{#best-value stats=stats event='threePointPercent' val=row.threePointPercent}}
+                        {{row.threePointPercent}}%
+                    {{/best-value}}
+                    {{#best-value stats=stats event='offenciveRebounds' val=row.offenciveRebounds}}
+                        {{row.offenciveRebounds}}
+                    {{/best-value}}
+                    {{#best-value stats=stats event='deffenciveRebounds' val=row.deffenciveRebounds}}
+                        {{row.deffenciveRebounds}}
+                    {{/best-value}}
+                    {{#best-value stats=stats event='totalRebounds' val=row.totalRebounds}}
+                        {{row.totalRebounds}}
+                    {{/best-value}}
                     <td>{{row.fouls}}</td>
                     <td>{{row.foulsCommited}}</td>
-                    <td>{{row.assists}}</td>
-                    <td>{{row.blockshots}}</td>
                     <td>{{row.losses}}</td>
-                    <td>{{row.steels}}</td>
-                    <td>{{row.efficiency}}</td>
-                    <td>{{row.points}}</td>
+                    {{#best-value stats=stats event='steels' val=row.steels}}
+                        {{row.steels}}
+                    {{/best-value}}
+                    {{#best-value stats=stats event='assists' val=row.assists}}
+                        {{row.assists}}
+                    {{/best-value}}
+                    {{#best-value stats=stats event='blockshots' val=row.blockshots}}
+                        {{row.blockshots}}
+                    {{/best-value}}
+                    {{#best-value stats=stats event='efficiency' val=row.efficiency}}
+                        {{row.efficiency}}
+                    {{/best-value}}
+                    {{#best-value stats=stats event='points' val=row.points}}
+                        {{row.points}}
+                    {{/best-value}}
                 </tr>
             {{/each}}
             </tbody>
             <tfoot>
                 <tr>
                     <td><strong>Totals</strong></td>
-                    <td>{{summary-by-event stats=stats event="freeThrowMade"}}/{{summary-by-event stats=stats event="totalFreeThrows"}}</td>
-                    <td>{{percent-by-event stats=stats event-made="freeThrowMade" event-total="totalFreeThrows"}}</td>
-                    <td>{{summary-by-event stats=stats event="fieldGoalMade"}}/{{summary-by-event stats=stats event="totalFieldGoals"}}</td>
-                    <td>{{percent-by-event stats=stats event-made="fieldGoalMade" event-total="totalFieldGoals"}}</td>
-                    <td>{{summary-by-event stats=stats event="threePointMade"}}/{{summary-by-event stats=stats event="totalThreePoints"}}</td>
-                    <td>{{percent-by-event stats=stats event-made="threePointMade" event-total="totalThreePoints"}}</td>
+                    <td>{{summary-by-event stats=stats event="freeThrowMade"}}/{{summary-by-event stats=stats event="freeThrowAttempts"}}</td>
+                    <td>{{percent-by-event stats=stats event-made="freeThrowMade" event-total="freeThrowAttempts"}}</td>
+                    <td>{{summary-by-event stats=stats event="fieldGoalMade"}}/{{summary-by-event stats=stats event="fieldGoalAttempts"}}</td>
+                    <td>{{percent-by-event stats=stats event-made="fieldGoalMade" event-total="fieldGoalAttempts"}}</td>
+                    <td>{{summary-by-event stats=stats event="threePointMade"}}/{{summary-by-event stats=stats event="threePointAttempts"}}</td>
+                    <td>{{percent-by-event stats=stats event-made="threePointMade" event-total="threePointAttempts"}}</td>
                     <td>{{summary-by-event stats=stats event="offenciveRebounds"}}</td>
                     <td>{{summary-by-event stats=stats event="deffenciveRebounds"}}</td>
                     <td>{{summary-by-event stats=stats event="totalRebounds"}}</td>
