--- a/api/app/assets/javascripts/templates/components/summary-row.hbs
+++ b/api/app/assets/javascripts/templates/components/summary-row.hbs
@@ -1,5 +1,7 @@
 <td><strong>{{title}}</strong></td>
-<td>{{summary-by-event stats=stats event="freeThrowMade"}}/{{summary-by-event stats=stats event="freeThrowAttempts"}}</td>
+<td>
+  {{summary-by-event stats=stats event="freeThrowMade"}}/{{summary-by-event stats=stats event="freeThrowAttempts"}}
+</td>
 <td>{{percent-by-event stats=stats event-made="freeThrowMade" event-total="freeThrowAttempts"}}</td>
 <td>{{summary-by-event stats=stats event="fieldGoalMade"}}/{{summary-by-event stats=stats event="fieldGoalAttempts"}}</td>
 <td>{{percent-by-event stats=stats event-made="fieldGoalMade" event-total="fieldGoalAttempts"}}</td>
