--- a/api/app/assets/javascripts/templates/games/stats.hbs
+++ b/api/app/assets/javascripts/templates/games/stats.hbs
@@ -4,7 +4,7 @@
     <ul class="nav nav-tabs" role="tablist">
         <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Stats</a></li>
         <li role="presentation"><a href="#compare-teams" aria-controls="compare-teams" role="tab" data-toggle="tab">Compare Teams</a></li>
-        <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
+        <li role="presentation"><a href="#compare-teams-charts" aria-controls="compare-teams-charts" role="tab" data-toggle="tab">Compare Teams Charts</a></li>
         <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
     </ul>
 
@@ -22,7 +22,9 @@
             {{compare-summary-stats data=model}}
         </div>
 
-        <div role="tabpanel" class="tab-pane" id="messages">MEssage</div>
+        <div role="tabpanel" class="tab-pane" id="compare-teams-charts">
+            {{compare-summary-charts gameData=model}}
+        </div>
         <div role="tabpanel" class="tab-pane" id="settings">settings</div>
     </div>
 </div>
