--- a/api/app/assets/javascripts/templates/games/index.hbs
+++ b/api/app/assets/javascripts/templates/games/index.hbs
@@ -1,6 +1,6 @@
 <legend>Games List</legend>
 <div class="row">
-    <div class="col-md-1">
+    <div class="col-lg-1">
         {{#link-to 'games.new' class="btn btn-primary"}}
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
             New Game
@@ -9,7 +9,7 @@
 </div>
 
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-lg-12">
         <table class="table">
             <thead>
             <tr>
