--- a/api/app/assets/javascripts/templates/player/_edit_fields.hbs
+++ b/api/app/assets/javascripts/templates/player/_edit_fields.hbs
@@ -1,7 +1,7 @@
 <div class="form-group">
-  <label for="number" class="col-md-1 control-label">Number</label>
+  <label for="number" class="col-lg-1 control-label">Number</label>
 
-  <div class="col-md-4">
+  <div class="col-lg-4">
     {{input type="text"
     value=model.number
     id="number"
@@ -12,9 +12,9 @@
 </div>
 
 <div class="form-group">
-  <label for="firstName" class="col-md-1 control-label">First Name</label>
+  <label for="firstName" class="col-lg-1 control-label">First Name</label>
 
-  <div class="col-md-4">
+  <div class="col-lg-4">
     {{input type="text"
     value=model.firstName
     id="firstName"
@@ -25,9 +25,9 @@
 </div>
 
 <div class="form-group">
-  <label for="lastName" class="col-md-1 control-label">Last Name</label>
+  <label for="lastName" class="col-lg-1 control-label">Last Name</label>
 
-  <div class="col-md-4">
+  <div class="col-lg-4">
     {{input type="text"
     value=model.lastName
     id="lastName"
@@ -38,9 +38,9 @@
 </div>
 
 <div class="form-group">
-  <label for="position" class="col-md-1 control-label">Position</label>
+  <label for="position" class="col-lg-1 control-label">Position</label>
 
-  <div class="col-md-4">
+  <div class="col-lg-4">
     {{view "select"
     content=controllers.player.playerPositions
     optionValuePath="content.positionId"
@@ -54,9 +54,9 @@
 </div>
 
 <div class="form-group">
-  <label for="height" class="col-md-1 control-label">Height</label>
+  <label for="height" class="col-lg-1 control-label">Height</label>
 
-  <div class="col-md-4">
+  <div class="col-lg-4">
     {{input type="text"
     value=model.height
     id="height"
@@ -67,9 +67,9 @@
 </div>
 
 <div class="form-group">
-  <label for="weight" class="col-md-1 control-label">weight</label>
+  <label for="weight" class="col-lg-1 control-label">weight</label>
 
-  <div class="col-md-4">
+  <div class="col-lg-4">
     {{input type="text"
     value=model.weight
     id="weight"
