--- a/api/app/assets/javascripts/templates/shared/_errors.hbs
+++ b/api/app/assets/javascripts/templates/shared/_errors.hbs
@@ -1,5 +1,5 @@
 <div {{bind-attr class=":row model.errors.length:show:hidden"}}>
-  <div class="col-md-12">
+  <div class="col-lg-12">
     <div class="alert alert-danger" role="alert">
       {{#each error in model.errors.content}}
         <p>
