--- a/api/app/assets/javascripts/templates/championships/show.hbs
+++ b/api/app/assets/javascripts/templates/championships/show.hbs
@@ -1,6 +1,6 @@
 <legend>Seasons of: {{model.name}}</legend>
 <div class="row">
-    <div class="col-md-1">
+    <div class="col-lg-1">
         {{#link-to 'seasons.new' class="btn btn-primary"}}
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
             New Season
@@ -8,7 +8,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-lg-12">
         <table class="table">
             <thead>
             <tr>
