--- a/api/app/assets/javascripts/templates/games/new.hbs
+++ b/api/app/assets/javascripts/templates/games/new.hbs
@@ -2,15 +2,15 @@
 
 <form class="form-horizontal" {{action 'save' on='submit'}}>
   <div class="form-group">
-    <label for="date" class="col-md-2 control-label">Date:</label>
-    <div class="col-md-2">
+    <label for="date" class="col-lg-2 control-label">Date:</label>
+    <div class="col-lg-2">
       {{pik-a-day date=model.date class="form-control"}}
     </div>
   </div>
 
   <div class="form-group">
-    <label for="homeTeam" class="col-md-2 control-label">Home Team:</label>
-    <div class="col-md-2">
+    <label for="homeTeam" class="col-lg-2 control-label">Home Team:</label>
+    <div class="col-lg-2">
     {{view "select"
     class="form-control"
     name=homeTeam
@@ -24,8 +24,8 @@
   </div>
 
   <div class="form-group">
-    <label for="awayTeam" class="col-md-2 control-label">Away Team:</label>
-    <div class="col-md-2">
+    <label for="awayTeam" class="col-lg-2 control-label">Away Team:</label>
+    <div class="col-lg-2">
       {{view "select"
       class="form-control"
       name=awayTeam
