--- a/api/app/assets/javascripts/templates/games/show.hbs
+++ b/api/app/assets/javascripts/templates/games/show.hbs
@@ -1,21 +1,21 @@
 <div class="row">
-  <div class="col-md-2 text-right">
+  <div class="col-lg-2 text-right">
     <legend>
       {{model.homeTeam.name}}
     </legend>
     <div class="big-text">{{points.home}}</div>
   </div>
-  <div class="col-md-2">
+  <div class="col-lg-2">
     {{game-timer
       currentTime=timerValue
       startDisabled=canNotStart
       action='gameStarted'}}
   </div>
-  <div class="col-md-2">
+  <div class="col-lg-2">
     <legend>{{model.awayTeam.name}}</legend>
     <div class="big-text">{{points.away}}</div>
   </div>
-  <div class="col-md-2 pull-right">
+  <div class="col-lg-2 pull-right">
     {{#if model.isStarted}}
       <button type="button" class="btn btn-default btn-warning" {{action 'finishGame'}} >
         Finish Game
@@ -25,7 +25,7 @@
 
 </div>
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-lg-12">
     <table class="table">
       <thead>
       <tr>
