--- a/api/app/assets/javascripts/templates/player/show.hbs
+++ b/api/app/assets/javascripts/templates/player/show.hbs
@@ -1,6 +1,6 @@
 <legend>Player Info</legend>
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-lg-4">
     <dl class="dl-horizontal">
       <dt>Team</dt>
       <dd>{{model.team.name}}</dd>
@@ -28,7 +28,7 @@
 
 </div>
 <div class="row">
-  <div class="col-md-4 text-center">
+  <div class="col-lg-4 text-center">
 
     {{#link-to 'player.edit' model class="btn btn-primary btn-sm"}}
       <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
