--- a/api/app/assets/javascripts/templates/shared/_form_buttons.hbs
+++ b/api/app/assets/javascripts/templates/shared/_form_buttons.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-4 text-center">
+  <div class="col-lg-4 text-center">
     <div class="form-actions">
       <button type="submit" class="btn btn-primary btn-sm">
         <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
