--- a/api/app/assets/javascripts/templates/teams/_edit_fields.hbs
+++ b/api/app/assets/javascripts/templates/teams/_edit_fields.hbs
@@ -1,7 +1,7 @@
 <div class="form-group">
-  <label for="name" class="col-md-1 control-label">Team name</label>
+  <label for="name" class="col-lg-1 control-label">Team name</label>
 
-  <div class="col-md-4">
+  <div class="col-lg-4">
     {{input type="text"
     value=name
     id="name"
@@ -12,9 +12,9 @@
 </div>
 
 <div class="form-group">
-  <label for="description" class="col-md-1 control-label">Description</label>
+  <label for="description" class="col-lg-1 control-label">Description</label>
 
-  <div class="col-md-4">
+  <div class="col-lg-4">
     {{textarea
     value=description
     id="description"
