--- a/api/app/assets/javascripts/templates/teams/index.hbs
+++ b/api/app/assets/javascripts/templates/teams/index.hbs
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-lg-4">
       {{#link-to 'teams.new' class='btn btn-primary'}}
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
         New Team
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-lg-6">
       <table class="table">
         <thead>
         <tr>
