--- a/api/app/assets/javascripts/templates/teams/show.hbs
+++ b/api/app/assets/javascripts/templates/teams/show.hbs
@@ -7,12 +7,12 @@
 
   </div>
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-lg-3">
       <h5>{{model.name}}</h5>
 
       <p>{{model.description}}</p>
     </div>
-    <div class="col-md-3">
+    <div class="col-lg-3">
       {{#link-to 'teams.edit' model class="btn btn-default btn-sm" }}
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         Edit Team
@@ -25,11 +25,11 @@
   </div>
 
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-lg-12">
       <legend>Players</legend>
 
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-lg-12">
           <table class="table">
             <thead>
             <tr>
